--- a/install
+++ b/install
@@ -19,5 +19,6 @@ ln -s $DOT_FILES_DIR/psqlrc .psqlrc
 ln -s $DOT_FILES_DIR/tmux.conf .tmux.conf
 
 ln -s $DOT_FILES_DIR/.config/nvim/init.vim init.vim
+ln -s $DOT_FILES_DIR/.config/nvim/lua lua
 
 touch .zshrc.local
