Update install script

--- a/install
+++ b/install
@@ -1,5 +1,15 @@
 #!/bin/zsh
 
+set -e
+
+brew install tmux neovim ack the_silver_searcher rbenv ruby-build pyenv ripgrep fd tree hivemind
+
+brew install fzf
+$(brew --prefix)/opt/fzf/install
+
+brew install --cask wezterm
+
+
 DOT_FILES_DIR=$(dirname $(realpath -s $0))
 
 ln -s $DOT_FILES_DIR/zshrc .zshrc
@@ -8,13 +18,14 @@ ln -s $DOT_FILES_DIR/zsh .zsh
 ln -s $DOT_FILES_DIR/gitconfig .gitconfig
 ln -s $DOT_FILES_DIR/gitignore .gitignore
 
-ln -s $DOT_FILES_DIR/agignore .agignore
-ln -s $DOT_FILES_DIR/gemrc .gemrc
-ln -s $DOT_FILES_DIR/pryrc .pryrc
-ln -s $DOT_FILES_DIR/psqlrc .psqlrc
 ln -s $DOT_FILES_DIR/tmux.conf .tmux.conf
 
 ln -s $DOT_FILES_DIR/init.lua .config/nvim/init.lua
 ln -s $DOT_FILES_DIR/lua .config/nvim/lua
+
+ln -s $DOT_FILES_DIR/gemrc .gemrc
+ln -s $DOT_FILES_DIR/pryrc .pryrc
+ln -s $DOT_FILES_DIR/psqlrc .psqlrc
+ln -s $DOT_FILES_DIR/agignore .agignore
 
 touch .zshrc.local
