--- a/install
+++ b/install
@@ -7,6 +7,8 @@ brew install --cask wezterm
 
 $(brew --prefix)/opt/fzf/install
 
+pip install beautysh sqlfluff
+
 DOT_FILES_DIR=$(dirname $(realpath -s $0))
 
 ln -s $DOT_FILES_DIR/zshrc .zshrc
